--- a/2023-H/.vscode/settings.json
+++ b/2023-H/.vscode/settings.json
@@ -27,5 +27,6 @@
     },
   ],
   "java.test.defaultConfig": "WPIlibUnitTests",
-  "hide-files.files": []
+  "hide-files.files": [],
+  "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx2G -Xms100m -Xlog:disable"
 }
