a lot of choreo stuff
got choreo paths running but need to investigate why they are overshooting

--- a/2023-H/.pathplanner/settings.json
+++ b/2023-H/.pathplanner/settings.json
@@ -1,9 +1,11 @@
 {
-  "robotWidth": 0.78,
-  "robotLength": 0.68,
+  "robotWidth": 0.69,
+  "robotLength": 0.79,
   "holonomicMode": true,
   "pathFolders": [],
-  "autoFolders": [],
+  "autoFolders": [
+    "ChoreoPaths"
+  ],
   "defaultMaxVel": 1.0,
   "defaultMaxAccel": 1.0,
   "defaultMaxAngVel": 540.0,
